force-app/main/default/objects/Apttus__WizardRuntime__c/Apttus__WizardRuntime__c.object-meta.xml
<CustomObject>
    <description>A runtime instance of the wizard design</description>
    <label>Wizard Runtime (Deprecated)</label>
    <nameField>
        <label>Wizard Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>