force-app/main/default/objects/Apttus__WizardRuntime__c/fields/Apttus__Completed__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates status of a wizard as being completed or in progress</description>
    <inlineHelpText>Indicates status of a wizard as being completed or in progress</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>