force-app/main/default/objects/Apttus__WizardRuntime__c/fields/Apttus__Continue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Continue__c</fullName>
    <description>Use this action to continue an In-Progress wizard</description>
    <formula>IF(Apttus__Completed__c = false, HYPERLINK(&quot;/apex/Apttus__Wizard?wizardruntimeid=&quot; &amp;Id,&quot;Continue&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this action to continue an In-Progress wizard</inlineHelpText>
    <label>Continue</label>
    <type>Text</type>
</CustomField>