force-app/main/default/objects/Apttus__WizardRuntime__c/fields/Apttus__Review__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Review__c</fullName>
    <description>Use this action to review a completed wizard</description>
    <formula>IF(Apttus__Completed__c = true, HYPERLINK(&quot;/apex/Apttus__Wizard?wizardruntimeid=&quot; &amp;Id,&quot;Review&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this action to review a completed wizard</inlineHelpText>
    <label>Review</label>
    <type>Text</type>
</CustomField>