force-app/main/default/objects/Apttus__WizardRuntime__c/fields/Apttus__WizardId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference/Lookup to wizard design</description>
    <inlineHelpText>Reference/Lookup to wizard design</inlineHelpText>
    <label>Wizard</label>
    <referenceTo>Apttus__Wizard__c</referenceTo>
    <relationshipName>WizardRuntime1</relationshipName>
    <type>Lookup</type>
</CustomField>