force-app/main/default/objects/Apttus__WizardRuntime__c/fields/Apttus__WizardInstanceNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardInstanceNumber__c</fullName>
    <description>Auto number (counter) of Wizard runtime. This identifies the Wizard runtime uniquely in the chronology of creation.</description>
    <inlineHelpText>Auto number (counter) of Wizard runtime. This identifies the Wizard runtime uniquely in the chronology of creation.</inlineHelpText>
    <label>Wizard Instance Number</label>
    <type>AutoNumber</type>
</CustomField>