force-app/main/default/objects/Apttus__WizardRuntime__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Apttus__Completed__c</columns>
    <columns>Apttus__Continue__c</columns>
    <columns>Apttus__Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>